test/good/loops/for12.px

for _, (a, b), c in [(false, (1, 2), 'c')] do
    print b, a, c
