test/bad/loops/for22.px

for x, y, z in [['a', 'b', 'c']] do
    skip
